--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div id="app">
+        <h2>People Generator</h2>
         <img :class="gender" v-bind:src="picture" :alt="`${firstName} ${lastName}`">
         <h1>{{firstName}} {{lastName}}</h1>
         <h3>Email: {{email}}</h3>
         <h4>Gender: {{gender}}</h4>
-        <button :class="gender" v-on:click="getUsers()">Generate Users</button>
+        <button :class="gender" v-on:click="getUsers()">Click to generate a Person</button>
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
