--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <h3>Email: {{email}}</h3>
         <h4>Gender: {{gender}}</h4>
         <button :class="gender" v-on:click="getUsers()">Click to generate a Person</button>
+        <div>
+            <h4>Developed by Que-M Codes</h4>
+            <small>copyright &copy;</small>
+        </div>
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
