--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h4>Gender: {{gender}}</h4>
         <button :class="gender" v-on:click="getUsers()">Click to generate a Person</button>
         <div>
-            <h4>Developed by Que-M Codes</h4>
-            <small>copyright &copy;</small>
+            <small>Developed by Que-M Codes</small>
+            <small>&copy; Copyright 2024</small>
         </div>
     </div>
 
