--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <h3>Email: {{email}}</h3>
         <h4>Gender: {{gender}}</h4>
         <button :class="gender" v-on:click="getUsers()">Click to generate a Person</button>
+        <br/>
         <div>
-            <small>Developed by Que-M Codes</small>
             <small>&copy; Copyright 2024</small>
+            <h5>Developed by Que-M Codes</h5>
         </div>
     </div>
 
