--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button :class="gender" v-on:click="getUsers()">Click to generate a Person</button>
         <br/>
         <div>
-            <small>&copy; Copyright 2024</small>
+            <h5>Copyright 2024 &copy;</h5>
             <h5>Developed by Que-M Codes</h5>
         </div>
     </div>
